# charge-system

./: .gitignore  CMakeLists.txt  Charging.cpp  Charging.h  ChargingRequest.h  README.md  Server.sln  Server.vcxproj.filters  main.cpp
Client/: AdminClient.cpp  AdminClient.h  Client.sln  Client.vcxproj  Client.vcxproj.filters  (+5 more)
server/: CMakeLists.txt  main.cpp  server.sln  server.vcxproj  server.vcxproj.filters
server/client/: AdminClient.cpp  AdminClient.h  UserClient.cpp  UserClient.h
server/entity/: ChargingPile.cpp  ChargingPile.h  Order.cpp  Order.h  User.cpp  User.h  Vehicle.cpp  WaitingArea.cpp
server/include/client/: AdminClient.h  UserClient.h
server/include/entity/: ChargingPile.h  ChargingType.h  Order.h  User.h  UserType.h  Vehicle.h  WaitingArea.h
server/include/repo/: OrderDB.h  UserDB.h
server/include/server/: Server.h
server/include/util/: HttpServer.h  JsonHelper.h  TimeHelper.h
server/include/util/nlohmann/: json.h  json_fwd.h
server/server/: Server.cpp  Server.h
server/server/x64/Debug/: server.exe.recipe  vc143.idb
server/server/x64/Debug/server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  server.lastbuildstate
server/src/: main.cpp
server/src/client/: AdminClient.cpp  UserClient.cpp
server/src/entity/: ChargingPile.cpp  Order.cpp  User.cpp  Vehicle.cpp  WaitingArea.cpp
server/src/repo/: OrderDB.cpp  UserDB.cpp
server/src/server/: Server.cpp
server/src/util/: HttpServer.cpp
server/util/: HttpServer.cpp
(+173 files in other folders)
